--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
 html, body {
-	width: 100%;
-	height: 100%;
-	margin: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 math-field:not(:defined) {
-	display: none;
+    display: none;
 }
 
 body {
-	background: black;
-	color: white;
-	font-size: 18px;
-	font-family: sans-serif;
-	position: relative;
-	overflow: hidden;
+    background: black;
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+    position: relative;
+    overflow: hidden;
 }
 
-@media not (pointer: coarse) {
-	math-field::part(virtual-keyboard-toggle) {
-		display: none;
-	}
+math-field::part(virtual-keyboard-toggle) {
+    display: none;
+}
+
+math-field {
+    font-size: 2em;
+    min-width: 2em;
 }
