--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 img {
-	height: 200px;
+	max-height: 200px;
 }
 
 h1, h2, h3, h4, h5, p {
@@ -28,6 +28,7 @@ h1, h2, h3, h4, h5, p {
 
 h4 {
 	margin-top: 10px;
+	border-top: 2px solid white;
 }
 
 math-field:not(:defined) {
@@ -48,12 +49,12 @@ math-field {
 	display: inline-block;
 }
 
-#ch23p36,
-#ch23p40,
-#ch24p7,
-#ch24p17,
-#ch24p21,
-#ch24p55
-{
-	display: none;
-}
+/*#ch23p36,*/
+/*#ch23p40,*/
+/*#ch24p7,*/
+/*#ch24p17,*/
+/*#ch24p21,*/
+/*#ch24p55*/
+/*{*/
+/*	display: none;*/
+/*}*/
